# AI_Lab_Exams

./: README.md  apk.py  medical_assistant.py  pyproject.toml
