[project]
name = "ai-lab-exams"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckduckgo-search>=7.5.5",
    "fastapi>=0.115.12",
    "google-generativeai>=0.8.4",
    "groq>=0.20.0",
    "openai>=1.69.0",
    "packaging>=24.2",
    "pgvector>=0.4.0",
    "phidata>=2.7.10",
    "pipwin>=0.5.2",
    "psycopg[binary]>=3.2.6",
    "pyaudio>=0.2.14",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
    "pyttsx3>=2.98",
    "speechrecognition>=3.14.2",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.44.0",
    "uvicorn>=0.34.0",
    "yfinance>=0.2.55",
]